--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -1426,3 +1426,43 @@ nav {
 }
 
 
+
+//
+#auctionTable {
+
+    thead {
+        th {
+            text-align: center;
+            font-weight: bold;
+        }
+    }
+
+    tbody {
+        
+        a {
+            display: block;
+
+        }
+        
+        tr {
+            height: 8vh;
+
+        }
+    }
+
+}
+
+
+.div--table {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .table--head {
+        display: table-header-group;
+        flex-direction: row;
+        text-align: center;
+        font-weight: bold;
+    }
+
+}
