--- a/WebApp/Views/CurrencyExchangeRates/Index.cshtml
+++ b/WebApp/Views/CurrencyExchangeRates/Index.cshtml
@@ -1,20 +1,6 @@
 ﻿@model IEnumerable<WebApp.Models.CurrencyExchangeRate>
 
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<title>Currency Exchange Rates (PLN to):</title>
 <table class="table">
     <thead>
         <tr>
@@ -43,7 +29,6 @@
                 @Html.DisplayFor(modelItem => item.LastUpdatedTime)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CurrencyId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.CurrencyId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.CurrencyId">Delete</a>
             </td>
@@ -51,5 +36,3 @@
 }
     </tbody>
 </table>
-</body>
-</html>
