--- a/WebApp/Views/Users/UserAccount.cshtml
+++ b/WebApp/Views/Users/UserAccount.cshtml
@@ -11,12 +11,14 @@
             </div>
 
             <div class="box box--content box--center">
-                <a asp-action="Create" asp-controller="Auctions" class="button button--secondary button--rounded"> New Auction  + </a>
-                <a asp-action="UserEdition" asp-route-id="@ViewBag.User.UserId" class="button button--secondary button--rounded"> Edit Account </a>
+                <a asp-action="Create" asp-controller="Auctions" class="button button--secondary button--rounded button--group button--group--first"> New Auction  + </a>
+                <a asp-action="UserEdition" asp-route-id="@ViewBag.User.UserId" class="button button--secondary button--rounded button--group"> Edit Account </a>
+                <a class="button button--secondary button--rounded button--group button--group--last" onclick="generateNewApiKey()">@WebApp.Resources.Shared.GenerateApiKey</a>
             </div>
 
         </div>
 
+        <div id="generateAPiKeyResult" class="background--secondary text--primary" style="text-align: center; padding: 0.5vh; display: none;"></div>
 
         <div class="box box--horizontal">
 
@@ -100,3 +102,13 @@
     </div>
 </div>
 
+<script>
+    function generateNewApiKey(){
+        $.post("@Url.Action("CreateNewKey","ApiKeys")",
+            function (data) {
+                $("#generateAPiKeyResult").show();
+                $("#generateAPiKeyResult").html("<p>" + data.message + "</p>");
+            }
+        );
+    }
+</script>
