--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -448,7 +448,6 @@ input[type=file] {
 .box--horizontal .box--center {
   text-align: center;
   display: flex;
-  width: 15vw;
 }
 
 .box--horizontal .box--center .button {
@@ -1232,4 +1231,16 @@ nav {
   border: 9px solid rgba(0, 0, 0, 0);
   background-clip: padding-box;
   border-radius: 9999px;
+}
+
+.button--group {
+  border: 1px solid;
+  border-radius: 0px;
+  border-collapse: collapse;
+}
+.button--group--first {
+  border-radius: 0.4rem 0 0 0.4rem;
+}
+.button--group--last {
+  border-radius: 0 0.4rem 0.4rem 0;
 }
