--- a/WebApp/Views/Categories/CategoryAuctions.cshtml
+++ b/WebApp/Views/Categories/CategoryAuctions.cshtml
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="auction--price text--primary">
-            @string.Format("{0:0.00} zł", item.Bid)           
+            @string.Format(item.Bid)           
         </div>
     </div>
     </a>
