--- a/WebApp/Views/Users/UserAccount.cshtml
+++ b/WebApp/Views/Users/UserAccount.cshtml
@@ -63,7 +63,7 @@
 
                             <div class="box--item">
                                 <div class="box--item--title">Tilte: @auction.Auction.Title</div>
-                                <div class="box--item--price">@string.Format("{0:0.00}zł", auction.Bid)</div>
+                                <div class="box--item--price">@string.Format(auction.Bid)</div>
                                 <div class="box--item--date">@auction.Auction.EndTime - end in @timeLeft.Days days </div>
                             </div>
                         </a>
@@ -88,7 +88,7 @@
 
                             <div class="box--item">
                                 <div class="box--item--title">Tilte: @bid.Auction.Title</div>
-                                <div class="box--item--price">@string.Format("{0:0.00}zł", bid.Price)</div>
+                                <div class="box--item--price">@string.Format(bid.Price)</div>
                                 <div class="box--item--date">@bid.Auction.EndTime - end in @timeLeft.Days days </div>
                             </div>
                         </a>
