--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -1264,20 +1264,6 @@ nav {
   align-items: flex-start;
   width: 70%;
 }
-.auctions--column--container .button--group {
-  border: 1px solid;
-  border-radius: 0px;
-  border-collapse: collapse;
-}
-.auctions--column--container .button--group--first {
-  border-radius: 0.4rem 0 0 0.4rem;
-}
-.auctions--column--container .button--group--last {
-  border-radius: 0 0.4rem 0.4rem 0;
-}
-.auctions--column--container .grecaptcha-badge {
-  bottom: 80px !important;
-}
 .auctions--column--container .auction--title {
   font-size: x-large;
   width: 100%;
@@ -1291,4 +1277,20 @@ nav {
 .auctions--column--container .auction--price {
   width: 10%;
   font-size: x-large;
+}
+
+.grecaptcha-badge {
+  bottom: 80px !important;
+}
+
+.button--group {
+  border: 1px solid;
+  border-radius: 0px;
+  border-collapse: collapse;
+}
+.button--group--first {
+  border-radius: 0.4rem 0 0 0.4rem;
+}
+.button--group--last {
+  border-radius: 0 0.4rem 0.4rem 0;
 }
