--- a/WebApp/wwwroot/css/dark.css
+++ b/WebApp/wwwroot/css/dark.css
@@ -67,3 +67,8 @@
 .dark-mode .user--details .item {
   background: radial-gradient(black, transparent);
 }
+
+#subPopUp {
+  background-color: aliceblue;
+  color: black;
+}
