--- a/WebApp/wwwroot/Styles/dark.scss
+++ b/WebApp/wwwroot/Styles/dark.scss
@@ -102,3 +102,8 @@
         background: radial-gradient(black, transparent);
     }
 }
+
+#subPopUp {
+    background-color: aliceblue;
+    color: black;
+}
