--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -1323,6 +1323,7 @@ nav {
 
 .subsection--title{
     padding-left: 2vw;
+    width: fit-content;
 }
 
 .add {
@@ -1499,7 +1500,39 @@ nav {
         border-radius: 0.4rem 0 0 0.4rem;
     }
 
+
     &--last {
         border-radius: 0 0.4rem 0.4rem 0;
     }
+}
+
+
+#subPopUp {
+    display: none;
+    background-size: cover;
+    border-radius: 20px;
+    position: fixed;
+    width: 450px;
+    top: 40%;
+    left: 50%;
+    margin-left: -225px; 
+    padding: 16px 8px 16px 8px;
+    box-sizing: border-box;
+    text-align: center;
+    z-index: 1;
+
+    /* Dialog box message */
+    .message {
+        text-align: left;
+        padding: 10px 30px;
+        text-align: center;
+    }
+}
+
+
+.description--header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
