--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -1152,6 +1152,7 @@ nav {
 
 .subsection--title {
   padding-left: 2vw;
+  width: fit-content;
 }
 
 .add--question {
@@ -1293,4 +1294,32 @@ nav {
 }
 .button--group--last {
   border-radius: 0 0.4rem 0.4rem 0;
+}
+
+#subPopUp {
+  display: none;
+  background-size: cover;
+  border-radius: 20px;
+  position: fixed;
+  width: 450px;
+  top: 40%;
+  left: 50%;
+  margin-left: -225px;
+  padding: 16px 8px 16px 8px;
+  box-sizing: border-box;
+  text-align: center;
+  z-index: 1;
+  /* Dialog box message */
+}
+#subPopUp .message {
+  text-align: left;
+  padding: 10px 30px;
+  text-align: center;
+}
+
+.description--header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
