fixed modal animation

--- a/WebApp/Views/Auctions/Auction.cshtml
+++ b/WebApp/Views/Auctions/Auction.cshtml
@@ -21,7 +21,7 @@
             <div class="subscribeButton" id="subscribe">
                 @if(!isOwner)
                 {
-                    <div id="subPopUp" class="slider--fade">
+                    <div id="subPopUp">
                         <div class="message">
                             <hr />
                             <span class="text--primary">
