--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -1309,6 +1309,10 @@ nav {
   box-sizing: border-box;
   text-align: center;
   z-index: 1;
+  animation: slider-fade;
+  animation-duration: 0.8s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
   /* Dialog box message */
 }
 #subPopUp .message {
