--- a/WebApp/Views/Auctions/Edit.cshtml
+++ b/WebApp/Views/Auctions/Edit.cshtml
@@ -197,7 +197,7 @@
                     <div class="form--buttons">
                         <button type="button" class="button button--secondary button--rounded" onclick="AddNewFile()">Add additional File</button>
                         <input type="submit" value="Save" class="button button--rounded button--secondary" />
-                        <a asp-action="Index" class="button button--rounded button--secondary">Back to List</a>
+                        <a asp-action="Auction" asp-route-id="@Model.AuctionId" class="button button--rounded button--secondary">Back to Auction</a>
                     </div>
 
                 </div>
