--- a/WebApp/Views/Users/UserAccount.cshtml
+++ b/WebApp/Views/Users/UserAccount.cshtml
@@ -86,7 +86,7 @@
                         TimeSpan timeLeft = (TimeSpan)(bid.Auction.EndTime - DateTime.UtcNow);
 
                         <hr />
-                        <a asp-action="Auction" asp-controller="Auctions" asp-route-id="@bid.BidId">
+                        <a asp-action="Auction" asp-controller="Auctions" asp-route-id="@bid.Auction.AuctionId">
 
                             <div class="box--item">
                                 <div class="box--item--title">Tilte: @bid.Auction.Title</div>
